<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_Enum" Id="{b6cdbd07-8b49-4a16-96cd-15e8ac69d4e9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Enum :
(
	Member0 := 0,
	Member1,
	Member2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>