<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_Packed" Id="{e065de16-737d-4d99-829b-e9160723d009}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'} 
TYPE ST_Packed :
STRUCT
	bMember  		: BOOL;
    dtMember 		: DT;
	fMember   		: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>